--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,10 @@ if(NOT APPLE AND NOT WIN32)
 endif()
 
 set(SRCS
-	armor.cpp    daemon.cpp   fight.cpp  jedi.cpp      main.cpp    monsters.cpp   options.cpp   potions.cpp  rooms.cpp    state.cpp   vers.cpp
+	armor.cpp    daemon.cpp   fight.cpp  jedi.cpp      main.cpp    monsters.cpp   options.cpp   potions.cpp  state.cpp   vers.cpp
 	chase.cpp    daemons.cpp  init.cpp   mdport.cpp  move.cpp       pack.cpp      rings.cpp    save.cpp     sticks.cpp  weapons.cpp
-	command.cpp  extern.cpp   io.cpp     mach_dep.cpp  misc.cpp    new_level.cpp  passages.cpp  rip.cpp      scrolls.cpp  things.cpp  wizard.cpp
-    line_of_sight.cpp
+	command.cpp  extern.cpp   io.cpp     mach_dep.cpp  misc.cpp    new_level.cpp  rip.cpp      scrolls.cpp  things.cpp  wizard.cpp
+    line_of_sight.cpp areas.cpp mapgen/classic/classic.cpp
 )
 
 add_executable(rogue ${SRCS})
