Add more food types.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SRCS
 	armor.cpp    daemon.cpp   fight.cpp  jedi.cpp      main.cpp    monsters.cpp   options.cpp   potions.cpp  state.cpp   vers.cpp
 	chase.cpp    daemons.cpp  init.cpp   mdport.cpp  move.cpp       pack.cpp      rings.cpp    save.cpp     sticks.cpp  weapons.cpp
 	command.cpp  extern.cpp   io.cpp     mach_dep.cpp  misc.cpp    new_level.cpp  rip.cpp      scrolls.cpp  things.cpp  wizard.cpp
-    line_of_sight.cpp areas.cpp mapgen/classic/classic.cpp mapgen/util.cpp mapgen/classic/maze.cpp mapgen/cave/cave.cpp
+    line_of_sight.cpp areas.cpp mapgen/classic/classic.cpp mapgen/util.cpp mapgen/classic/maze.cpp mapgen/cave/cave.cpp food.cpp
 )
 
 add_executable(rogue ${SRCS})
